<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ReportActivity">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/review_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:gravity="center"
            android:text="@string/review_title_text"
            android:textColor="@android:color/black"
            android:textSize="36sp"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:gravity="center"
            android:padding="4dp"
            android:text="@string/review_advisory_text"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/review_tv" />

        <LinearLayout
            android:id="@+id/review_ll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:orientation="vertical"
            android:padding="8dp"
            app:layout_constraintTop_toBottomOf="@id/subtitle">

            <EditText
                android:id="@+id/officer_name_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:background="@drawable/text_box_outline_inactive"
                android:hint="@string/officer_name_hint"
                android:lines="1"
                android:padding="8dp" />


            <EditText
                android:id="@+id/officer_municipality_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:background="@drawable/text_box_outline_inactive"
                android:hint="@string/officer_department_hint"
                android:lines="1"
                android:padding="8dp" />


            <EditText
                android:id="@+id/officer_badge_number_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:background="@drawable/text_box_outline_inactive"
                android:hint="@string/officer_badge_number_hint"
                android:lines="1"
                android:padding="8dp" />


            <EditText
                android:id="@+id/description_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:background="@drawable/text_box_outline_inactive"
                android:gravity="top|start"
                android:hint="@string/description_hint"
                android:inputType="textMultiLine"
                android:minLines="3"
                android:padding="8dp"
                android:scrollbars="vertical" />


            <me.zhanghai.android.materialratingbar.MaterialRatingBar
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="4dp"
                android:numStars="5"
                android:stepSize="1" />

            <com.google.android.material.button.MaterialButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="4dp"
                android:text="@string/review_button_text"
                android:textColor="@android:color/white">

            </com.google.android.material.button.MaterialButton>

        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>